# secure-email-auth

./: .gitignore  .pre-commit-config.yaml  AI_KURALLARI.md  LICENSE  README.md  abstract.tex  alice_panel.py  bob_panel.py  chapter1.tex  chapter2.tex  crypto_core.py  crypto_workers.py  defination.tex  giris.tex  kisaltmasimge.tex  main_gui.py  multidisiplin.eps  ozet.tex  ozgecmis.tex  pyproject.toml  referanslar.bib  requirements-dev.txt  requirements.txt  sonuc.tex  tesekkurler.tex  test_aes_matrix_view.py  test_animation_smoke.py  test_animation_widgets_smoke.py  test_crypto_core.py  test_crypto_workers.py  test_diagram_rects.py  test_message_prep_animation.py  test_rsa_animation.py  test_sha256_pure.py  test_utils.py  theme.py  thesis.aux  thesis.bbl  thesis.blg  thesis.lof  (+5 more)
.claude/: settings.json
animation_modals/: __init__.py  aes_animation.py  aes_matrix_view.py  aes_pure.py  base.py  byte_widgets.py  matrix_widget.py  rsa_animation.py  sha256_animation.py  sha256_pure.py
arayuz/: __init__.py  accessibility.py  alice_panel.py  bob_panel.py  constants.py  error_dialog.py  theme.py  theme_toggle.py  toast.py  widget_utils.py
cekirdek/: __init__.py  crypto_workers.py  utils.py
kriptografi/: __init__.py  crypto_core.py  crypto_workers.py  errors.py  utils.py
testler/: __init__.py  conftest.py  test_accessibility.py  test_aes_keystream_dialog.py  test_aes_matrix_view.py  test_aes_pure.py  test_aes_round_flow.py  test_aes_sbox_derivation.py  test_aes_sbox_dialog.py  test_animation_smoke.py  test_animation_widgets_smoke.py  test_crypto_core.py  test_utils.py  (+16 more)
(+49 files in other folders)
